firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__model_reasoning_selection_popup_extra_high_warning.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Reasoning Level for gpt-5.2

  1. Low                   Balances speed with some reasoning; useful for
                           straightforward queries and short explanations
  2. Medium (default)      Provides a solid balance of reasoning depth and
                           latency for general-purpose tasks
  3. High                  Maximizes reasoning depth for complex or ambiguous
                           problems
› 4. Extra high (current)  Extra high reasoning for complex problems
                           ⚠ Extra high reasoning effort can quickly consume
                           Plus plan rate limits.

  ↑/↓ Navigate · enter Select · tab Complete · esc to cancel
