firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running firefam -m <model_name> or in your config.to

  1. gpt-5.5 (default)  Frontier model for complex coding, research, and real-
                        world work.
  2. gpt-5.4            Strong model for everyday coding.
  3. gpt-5.4-mini       Small, fast, and cost-efficient model for simpler
                        coding tasks.
  4. gpt-5.3-codex      Coding-optimized model.
› 5. gpt-5.2 (current)  Optimized for professional work and long-running
                        agents.

  Press enter to confirm or esc to go back
