firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__personality_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Personality
  Choose a communication style for Firefam.

  1. Friendly             Warm, collaborative, and helpful.
› 2. Pragmatic (current)  Concise, task-focused, and direct.

  ↑/↓ Navigate · enter Select · tab Complete · esc to cancel
