firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__plan_mode_nudge.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
expression: "render_bottom_popup(&chat, 80)"
---
────────────────────────────────────────────────────────────────────────────────
  /tmp/project
› make a plan
────────────────────────────────────────────────────────────────────────────────
  Create a plan?  shift + tab use Plan mode   esc d… Read Only · gpt-5 default
