firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__plan_mode_nudge_narrow.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
expression: "render_bottom_popup(&chat, 36)"
---
────────────────────────────────────
  /tmp/project
› make a plan
────────────────────────────────────
  Creat… Read Only · gpt-5 default
